Bug #26514 Invalid memory access could occur during DD usage
Submitted: 21 Feb 2007 4:43 Modified: 9 Mar 2007 2:55
Reporter: Jonas Oreland
Status: Closed
Category:Server: ClusterDD Severity:S3 (Non-critical)
Version:5.1 OS:
Assigned to: Jonas Oreland Target Version:

[21 Feb 2007 4:43] Jonas Oreland
Description:
 

How to repeat:
 

Suggested fix:
[21 Feb 2007 16:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/20281

ChangeSet@1.2418, 2007-02-21 16:33:16+01:00, jonas@eel.(none) +4 -0
  ndb - bug#26514
    fix overflow that could occur when have either lots of dd-data or very high
dd-parallelism
[21 Feb 2007 19:18] Jonas Oreland
pushed to 5.1-ndb, telco-6.1, 5.1-telco
[27 Feb 2007 6:09] Jon Stephens
Documented fix for telco-6.1.3 release - left bug status unchanged.
[8 Mar 2007 17:47] Tomas Ulin
5.1.17
[9 Mar 2007 2:55] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.17 changelog; closed.