ndb - bug#26514   fix overflow that could occur when have either lots of dd-data or very high dd-parallelism